--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "RCD-MD",
+  "name": "GHOST-MD",
   "description": "A simple WhatsApp bot with advanced features",
   "logo": "https://i.postimg.cc/FssKzLK7/20240622-140407.jpg",
-  "keywords": "RCD md",
+  "keywords": "GHOST MD",
   "success_url": "/Asta/",
   "app_url": "/qr/",
 
@@ -28,7 +28,7 @@
     },
     "OWNER_NAME": {
       "description": "Owner Name",
-      "value": "RCD",
+      "value": "GHOST",
       "required": true
     },
 
@@ -46,7 +46,7 @@
     "BOT_NAME": {
       "description": "Bot Name",
       "required": false,
-      "value": "RCD-MD"
+      "value": "GHOST-MD"
     },
     "USER_IMAGES": {
       "description": "Image for bot",
@@ -104,7 +104,7 @@
     },
     "OWNER_NUMBER": {
       "description": "Owner number or sudo",
-      "value": "263714497545"
+      "value": "94741140620"
     },
     "OPENAI_API_KEY": {
       "description": "put your OPENAI api key here.Get it from beta.openai.com ",
@@ -127,7 +127,7 @@
     },
     "PACK_NAME": {
       "description": "Put Sticker Pack_Name.",
-      "value": "RCD-MD",
+      "value": "GHOST-MD",
       "required": false
     },
     "PACK_AUTHER": {
