--- a/source/whatsapp.json
+++ b/source/whatsapp.json
@@ -1,7 +1,7 @@
 {
     "__JSON__": true,
-    "AUTHOR": "DEXTER",
-    "Theme": "RCD-MD",
+    "AUTHOR": "GHOST",
+    "Theme": "GHOST-MD",
     "LANGCODE": "en",
     "STRINGS": {  
         "updater": {    
@@ -10,7 +10,7 @@
             "UPDATED_LOCAL": "*Successfully Updated!*"
         },    
         "global": {   
-            "botName": "RCD-MD",
+            "botName": "GHOST-MD",
             "body": "As always Sir.",
           "greet2" : "Hello Sir",
             "pic1": "https://i.imgur.com/OQOH4Gn.jpeg",
@@ -23,18 +23,18 @@
              "greet" : "Sir", 
            "dotbody" : "Oh, hello sir..",
             "promote": "Admin Role Privileged",
-            "pmallow": "*Hii,This is RCDr*\n*An assistant of My Master.*\nMy Master is busy right now.\nKindly Leave your Message.\n\n_I will inform him about your message asap......_",
-            "pmblock": "❌ Blocked*\n\n You have been blocked for spamming.\n\n _𝐏𝐨𝐰𝐞𝐫𝐞𝐝 𝐛𝐲 RCD-MD",
+            "pmallow": "*Hii,This is GHOSTr*\n*An assistant of My Master.*\nMy Master is busy right now.\nKindly Leave your Message.\n\n_I will inform him about your message asap......_",
+            "pmblock": "❌ Blocked*\n\n You have been blocked for spamming.\n\n _𝐏𝐨𝐰𝐞𝐫𝐞𝐝 𝐛𝐲 GHOST-MD",
             "pmwarn": "✋Hii* \nPlease don't spam else I'll block you for spamming. _You have ${checkPermit.times} warning(s).",
-            "permited": "Hii ${tname}*\n\nNow You are permitted by my owner to pm now.\n\n *𝐏𝐨𝐰𝐞𝐫𝐞𝐝 𝐛𝐲 RCD-MD*", 
-            "revoked" : "*Hii ${tname}*\n\nYour pm permit permission has been prevoked now.\n\n _ 𝐏𝐨𝐰𝐞𝐫𝐞𝐝 𝐛𝐲 RCD-MD",
+            "permited": "Hii ${tname}*\n\nNow You are permitted by my owner to pm now.\n\n *𝐏𝐨𝐰𝐞𝐫𝐞𝐝 𝐛𝐲 GHOST-MD*", 
+            "revoked" : "*Hii ${tname}*\n\nYour pm permit permission has been prevoked now.\n\n _ 𝐏𝐨𝐰𝐞𝐫𝐞𝐝 𝐛𝐲 GHOST-MD",
             "demote": "Uhh,Admin Role Taken back",
             "antlink": "Link Detected.\n*Good Bye Bro*",
             "session": "\n*This is your session.sam.json,keep it safe",
             "mention": " Please atleast mention any user bro.",
-            "title": "RCD-MD",
-            "footer": "RCD-MD",
-            "by": "Made by: *RCD TEAM*",
+            "title": "GHOST-MD",
+            "footer": "GHOST-MD",
+            "by": "Made by: *GHOST TEAM*",
             "chat_desc": "Options Avilable* : 1. mute\n2. unmute\n3. archive\n4. unarchive\n5. read\n6. unread\n7. delete",
             "success": "Done ✓",
             "dot": "Hii Sir, Did you mean *-help?*",
