--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "RCD-MD",
+    "name": "GHOST-MD",
     "version": "1.0.0",
     "description": "Simple Whatsapp Bot made by nteej",
     "main": "index.js",
