--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "main": "index.js",
     "type": "commonjs",
     "scripts": {
-        "run": "pm2 start . --deep-monitoring --attach --name RCD_0.1 || node .",
-        "start": "pm2 start . --attach --name RCD_0.1",
+        "run": "pm2 start . --deep-monitoring --attach --name GHOST_0.1 || node .",
+        "start": "pm2 start . --attach --name GHOST_0.1",
         "stop": "pm2 stop Anita_0.1",
         "build": "echo \"Building the project...\""
     },
-    "author": "RCD-MD",
+    "author": "GHOST-MD",
     "dependencies": {
         "@adiwajshing/keyed-db": "^0.2.4",
         "@hapi/boom": "^9.1.4",
